--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,22 +1,21 @@
-.custom-navbar {
-  background-color: white;
+.navbar {
+  background-color: var(--white);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   font-weight: bold;
   padding: 0.6rem 1.2rem;
 }
 
-.custom-navbar .nav-link {
+.navbar .nav-link {
   color: #444;
   margin-right: 1rem;
   transition: color 0.2s;
 }
 
-.custom-navbar .nav-link:hover {
-  color: #007acc;
+.navbar .nav-link:hover {
+  color: var(--primary);
 }
 
-.custom-navbar .navbar-brand {
+.navbar .navbar-brand {
   font-weight: bold;
-  color: #007acc;
   font-size: 1.2rem;
 }
