making step by step path in neural net

--- a/src/styles/NeuralMesh.css
+++ b/src/styles/NeuralMesh.css
@@ -2,11 +2,13 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  padding-top: 2rem;
   z-index: 2;
   position: relative;
   pointer-events: none;
   opacity: 0.5;
 }
+
 canvas {
   max-width: 100%;
   height: auto;
