--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,3 +1,9 @@
+#experience {
+  padding: 5rem 1.5rem;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 .joblist-job-title {
   font-size: 1.1rem;
   font-weight: 500;
