--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,6 +1,7 @@
 #projects {
   margin: auto;
-  padding-top: 100px;
+  padding: 5rem 1.5rem;
+  /* padding-top: 100px; */
   max-width: 1000px;
   min-height: 50vh;
 }
@@ -40,6 +41,7 @@
 }
 
 .github-icon, .open-icon {
+  margin: 0 0.5rem;
   color: var(--text, #1a1a1a);
   transition: color 0.2s;
 }
