--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,5 @@
 #about {
   padding: 5rem 1.5rem;
-  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -22,6 +21,7 @@
   color: var(--text, #1a1a1a);
   margin-bottom: 1rem;
   line-height: 1.6;
+  text-align: justify;
 }
 
 .tech-stack {
