--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,6 +1,6 @@
 #experience {
   padding: 5rem 1.5rem;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -24,6 +24,8 @@
 .job-description {
   padding-left: 1.2rem;
   margin: 0;
+  text-align: justify;
+
 }
 
 .job-description li {
