--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,12 +1,21 @@
 :root {
-  --primary: #007acc;
+  --background: #f7f9fc;
   --text: #1a1a1a;
-  --gray: #666;
-  --light: #f7f9fc;
+  --border: #ccc;
+  --primary: #007acc;
   --white: #fff;
-  --border: #e0e0e0;
-  --green-accent: #00b894;
+  --gray: #666;
+  --light-gray: #f4f6f8;
+  --light-gray-hower: #e8f1f9;
 }
+
+/* :root {
+  --text: #f7f9fc;
+  --background: #0F0F0F;
+  --primary: #007acc;
+  --gray: #666;
+  --white: #fff;
+} */
 
 * {
   margin: 0;
@@ -21,7 +30,7 @@ html {
 
 body {
   font-family: 'Inter', sans-serif;
-  background: var(--white);
+  background: var(--background);
   color: var(--text);
   line-height: 1.6;
 }
@@ -75,8 +84,7 @@ main {
 .section-header h2 {
   font-size: 2.5rem;
   font-weight: 600;
-  color: var(--primary, #007acc);
-  color: var(--text, #1a1a1a);
+  color: var(--text);
   white-space: nowrap;
   margin-bottom: 2rem;
   font-family: monospace;
@@ -86,7 +94,7 @@ main {
   content: "";
   flex-grow: 1;
   height: 1px;
-  background-color: var(--border, #ccc);
+  background-color: var(--border);
   margin-left: 1rem;
   opacity: 0.5;
 }
