fix black focused navbar link

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -6,13 +6,13 @@
 }
 
 .navbar .nav-link {
-  color: var(--color-text);
+  color: var(--color-text-primary) !important;;
   margin-right: 1rem;
   transition: color 0.2s;
 }
 
 .navbar .nav-link:hover {
-  color: var(--color-primary);
+  color: var(--color-primary) !important;; 
 }
 
 .navbar .navbar-brand {
