--- a/src/styles/Publications.css
+++ b/src/styles/Publications.css
@@ -15,7 +15,7 @@
 
 .publication-list a {
   text-decoration: none;
-  color: var(--color-primary);
+  color: var(--color-text-primary);
   font-weight: 500;
 }
 
